Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -85,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -167,6 +169,13 @@
     "print ('----------------------------')\n",
     "print ('Model: Y =',round(m,2),'* X +', round(c,2))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
